--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,7 +19,7 @@
         
         &--icloud{
             z-index: 2;
-            margin-top: 10%;
+        
         }
     }
     &__sub-heading{
@@ -38,6 +38,7 @@
         &--keyboard{
             font-weight: 700;
             text-transform: capitalize;
+            width: 70%;
 
         }
         
@@ -49,7 +50,7 @@
         
         &--icloud{
             z-index: 2;
-            margin-top: 10%;
+        
         }
     }
     &__details{
@@ -70,7 +71,6 @@
         &--icloud{
             width:70%;
             z-index: 2;
-            margin-top: 10%;
         }
     }
     
@@ -93,18 +93,16 @@
         }
         
         &--keyboard{
-            margin-top: 5%;
+           
         }
         
         &--mac{
-           margin-top: 5%;
+         
         }
         
         &--icloud{
             font-size: 1.2rem;
             letter-spacing: .24rem;
-            margin-top: 1rem;
-            margin-top: 10%;
             background-color: #ffc80a;
             padding: 1.4rem;
             border-radius: 3rem;
